--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,6 +1,6 @@
 schemaVersion: 2.2.0
 metadata:
-  name: udi-plus-workspace
+  name: elohim-devspace
   displayName: Che Image and Workspace Development
   description: >-
     Universal Developer Image provides various programming languages tools and
