staging and production config

--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -11,3 +11,17 @@ spec:
     port: 80
     targetPort: 80
   type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: elohim-site-staging-service
+  namespace: ethosengine
+spec:
+  selector:
+    app: elohim-site-staging
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 80
+  type: ClusterIP
