--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -20,6 +20,10 @@ spec:
         image: harbor.ethosengine.com/ethosengine/elohim-site:BUILD_NUMBER_PLACEHOLDER
         ports:
         - containerPort: 80
+        volumeMounts:
+        - name: config
+          mountPath: /usr/share/nginx/html/assets/config.json
+          subPath: config.json
         resources:
           requests:
             memory: "128Mi"
@@ -27,3 +31,45 @@ spec:
           limits:
             memory: "256Mi"
             cpu: "200m"
+      volumes:
+      - name: config
+        configMap:
+          name: elohim-config-prod
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: elohim-site-staging
+  namespace: ethosengine
+  labels:
+    app: elohim-site-staging
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: elohim-site-staging
+  template:
+    metadata:
+      labels:
+        app: elohim-site-staging
+    spec:
+      containers:
+      - name: elohim-site-staging
+        image: harbor.ethosengine.com/ethosengine/elohim-site:BUILD_NUMBER_PLACEHOLDER
+        ports:
+        - containerPort: 80
+        volumeMounts:
+        - name: config
+          mountPath: /usr/share/nginx/html/assets/config.json
+          subPath: config.json
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+          limits:
+            memory: "256Mi"
+            cpu: "200m"
+      volumes:
+      - name: config
+        configMap:
+          name: elohim-config-staging
