correct staging namespace

--- a/manifests/configmap-staging.yaml
+++ b/manifests/configmap-staging.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: elohim-config-staging
-  namespace: default
+  namespace: ethosengine
 data:
   config.json: |
     {
