refine staging and debug-bar config

--- a/elohim-app/angular.json
+++ b/elohim-app/angular.json
@@ -97,6 +97,9 @@
             },
             "development": {
               "buildTarget": "elohim-app:build:development"
+            },
+            "staging": {
+              "buildTarget": "elohim-app:build:staging"
             }
           },
           "defaultConfiguration": "development"
