--- a/elohim-app/.cypress-cucumber-preprocessorrc.json
+++ b/elohim-app/.cypress-cucumber-preprocessorrc.json
@@ -12,5 +12,7 @@
   },
   "stepDefinitions": [
     "cypress/e2e/step_definitions/**/*.js"
-  ]
+  ],
+  "filterSpecs": true,
+  "omitFiltered": true
 }
