--- a/elohim-app/package.json
+++ b/elohim-app/package.json
@@ -42,7 +42,8 @@
     "typescript": "~5.7.2",
     "cypress": "^13.15.2",
     "@badeball/cypress-cucumber-preprocessor": "^22.1.0",
-    "@cypress/browserify-preprocessor": "^3.0.2"
+    "@cypress/browserify-preprocessor": "^3.0.2",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.2"
   },
   "cypress-cucumber-preprocessor": {
     "json": {
