--- a/elohim-app/angular.json
+++ b/elohim-app/angular.json
@@ -115,6 +115,7 @@
               "zone.js/testing"
             ],
             "tsConfig": "tsconfig.spec.json",
+            "codeCoverage": true,
             "assets": [
               {
                 "glob": "**/*",
