--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -1,3 +1,4 @@
+#TODO separate staging/production ingress separate CI/CD to safely handle potential breaking ingress configurations.
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -5,19 +6,6 @@ metadata:
   namespace: ethosengine
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    # Cache static assets globally
-    nginx.ingress.kubernetes.io/server-snippet: |
-      location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-      }
-    # Angular routing fallback with no-cache for HTML
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      add_header Cache-Control "no-cache, no-store, must-revalidate";
-      add_header Pragma "no-cache";
-      add_header Expires "0";
-      try_files $uri $uri/ /index.html;
 spec:
   ingressClassName: public
   rules:
