--- a/devfile.yaml
+++ b/devfile.yaml
@@ -54,7 +54,7 @@ components:
           targetPort: 4200
           exposure: public
           protocol: http
-        - name: angular-playground
+        - name: ui-playground
           targetPort: 4201
           exposure: public
           protocol: http
@@ -65,6 +65,16 @@ commands:
       commandLine: |
         echo 'export NPM_CONFIG_CACHE=/tmp/npm-cache' >> ~/.bashrc
         source ~/.bashrc
+
+  - id: setup-vscode-cli
+    exec:
+      component: tools
+      commandLine: |
+        # Create VS Code CLI symlink (code-oss -> code)
+        # ⚠️ REVIEW REQUIRED: If base UBI image changes, verify /checode path exists
+        # See containers/udi-plus/Dockerfile for details
+        mkdir -p /home/user/.local/bin
+        ln -sf /checode/checode-linux-libc/ubi9/bin/remote-cli/code-oss /home/user/.local/bin/code
 
   - id: setup-claude-mcp
     exec:
@@ -95,5 +105,6 @@ commands:
            
 events:
   postStart:
+    - setup-vscode-cli
     - setup-npm-env
     - setup-claude-mcp
