--- a/elohim-app/package.json
+++ b/elohim-app/package.json
@@ -29,7 +29,9 @@
     "@angular/router": "^19.2.0",
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
+    "highlight.js": "^11.11.1",
     "marked": "^17.0.1",
+    "marked-highlight": "^2.2.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
