--- a/elohim-app/package.json
+++ b/elohim-app/package.json
@@ -7,7 +7,7 @@
     "start:staging": "ng serve --disable-host-check --configuration=staging",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --watch=false",
     "test:headless": "ng test --watch=false --browsers=ChromeHeadlessCI",
     "test:ci": "ng test --watch=false --browsers=ChromeHeadlessCI --code-coverage",
     "cypress:open": "cypress open",
