--- a/holochain/manifests/edgenode-dev.yaml
+++ b/holochain/manifests/edgenode-dev.yaml
@@ -100,9 +100,9 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
     nginx.ingress.kubernetes.io/upstream-hash-by: "$binary_remote_addr"
     nginx.ingress.kubernetes.io/websocket-services: "elohim-edgenode-dev"
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    cert-manager.io/cluster-issuer: letsencrypt-production
 spec:
-  ingressClassName: nginx
+  ingressClassName: public
   tls:
     - hosts:
         - holochain-dev.elohim.host
