fix: use bash for health probes (ash/sh doesn't support /dev/tcp)
The Edge Node image uses Alpine with busybox ash as /bin/sh, which
doesn't support /dev/tcp. Bash does, so use bash explicitly.

--- a/holochain/manifests/edgenode-alpha.yaml
+++ b/holochain/manifests/edgenode-alpha.yaml
@@ -49,21 +49,22 @@ spec:
             - name: holochain-data
               mountPath: /data
           # Use exec probe since conductor binds to localhost
+          # bash supports /dev/tcp, ash/sh does not
           livenessProbe:
             exec:
               command:
-                - /bin/sh
+                - bash
                 - -c
-                - "nc -z 127.0.0.1 4444 || exit 1"
+                - "echo > /dev/tcp/127.0.0.1/4444"
             initialDelaySeconds: 60
             periodSeconds: 30
             failureThreshold: 5
           readinessProbe:
             exec:
               command:
-                - /bin/sh
+                - bash
                 - -c
-                - "nc -z 127.0.0.1 4444 || exit 1"
+                - "echo > /dev/tcp/127.0.0.1/4444"
             initialDelaySeconds: 30
             periodSeconds: 10
             failureThreshold: 3
