feat: add socat sidecar to proxy localhost-bound conductor to pod network
Holochain conductor binds to 127.0.0.1 by default, making it unreachable
from outside the container. Added alpine/socat sidecar that listens on
0.0.0.0:8444 and forwards to localhost:4444.

- Service now targets port 8444 (socat) instead of 4444 (conductor)
- Simplified ingress to single path (removed /admin split)
- socat has its own TCP readiness probe

--- a/holochain/manifests/edgenode-dev.yaml
+++ b/holochain/manifests/edgenode-dev.yaml
@@ -32,13 +32,6 @@ spec:
       containers:
         - name: edgenode
           image: harbor.ethosengine.com/ethosengine/elohim-edgenode:BUILD_NUMBER_PLACEHOLDER
-          ports:
-            - name: admin-ws
-              containerPort: 4444
-              protocol: TCP
-            - name: app-ws
-              containerPort: 4445
-              protocol: TCP
           env:
             - name: CONDUCTOR_MODE
               value: "true"
@@ -72,6 +65,28 @@ spec:
             initialDelaySeconds: 30
             periodSeconds: 10
             failureThreshold: 3
+        # Sidecar proxy to expose localhost-bound conductor to the pod network
+        - name: ws-proxy
+          image: alpine/socat:latest
+          args:
+            - "TCP-LISTEN:8444,fork,reuseaddr"
+            - "TCP:127.0.0.1:4444"
+          ports:
+            - name: admin-ws
+              containerPort: 8444
+              protocol: TCP
+          resources:
+            requests:
+              memory: "16Mi"
+              cpu: "10m"
+            limits:
+              memory: "64Mi"
+              cpu: "100m"
+          readinessProbe:
+            tcpSocket:
+              port: 8444
+            initialDelaySeconds: 5
+            periodSeconds: 5
       volumes:
         - name: holochain-data
           emptyDir:
@@ -90,11 +105,7 @@ spec:
   ports:
     - name: admin-ws
       port: 4444
-      targetPort: 4444
-      protocol: TCP
-    - name: app-ws
-      port: 4445
-      targetPort: 4445
+      targetPort: 8444  # socat proxy port
       protocol: TCP
   selector:
     app: elohim-edgenode
@@ -121,17 +132,10 @@ spec:
     - host: holochain-dev.elohim.host
       http:
         paths:
-          - path: /admin
-            pathType: Prefix
-            backend:
-              service:
-                name: elohim-edgenode-dev
-                port:
-                  number: 4444
           - path: /
             pathType: Prefix
             backend:
               service:
                 name: elohim-edgenode-dev
                 port:
-                  number: 4445
+                  number: 4444
