--- a/holochain/edgenode/conductor-config.yaml
+++ b/holochain/edgenode/conductor-config.yaml
@@ -1,20 +1,24 @@
 # Holochain Conductor Configuration for Elohim Protocol
 #
 # This configuration is optimized for web-first development:
-# - Admin interface on port 4444 (allows any origin for dev)
+# - Admin interface on port 4444 (restricted origins)
 # - Uses your existing bootstrap server: holostrap.elohim.host
 # - WebRTC networking via tx5/Kitsune2
-#
-# In production, restrict allowed_origins to your domain.
 
 # Admin interface for conductor management
 admin_interfaces:
   - driver:
       type: websocket
       port: 4444
-      # Allow any origin during development
-      # In production: restrict to ['https://elohim.host']
-      allowed_origins: "*"
+      # Restrict to Elohim domains only
+      allowed_origins:
+        - "https://elohim.host"
+        - "https://alpha.elohim.host"
+        - "https://staging.elohim.host"
+        - "https://holochain-dev.elohim.host"
+        - "https://holochain-alpha.elohim.host"
+        - "http://localhost:4200"
+        - "http://localhost:8080"
 
 # Network configuration
 network:
