--- a/steward/src-tauri/Cargo.toml
+++ b/steward/src-tauri/Cargo.toml
@@ -20,8 +20,11 @@ tauri = { version = "2.9", features = ["devtools"] }
 tauri-plugin-holochain = { git = "https://github.com/darksoil-studio/tauri-plugin-holochain", branch = "main-0.6" }
 tauri-plugin-log = "2.7"
 tauri-plugin-opener = "2.5"
+tauri-plugin-deep-link = "2"
 log = "0.4"
 url2 = "0.0.6"
 app_dirs2 = "2.5.5"
 tempdir = "0.3.7"
 anyhow = "1"
+serde = { version = "1", features = ["derive"] }
+url = "2"
